   * Added [effect] apply_to=overlay
   * Added [effect] apply_to=experience
   * Added [terrain_type] max_light= and min_light=.
   * Standardize weapon filters, supporting special=, [and], [or], and [not]
     wherever weapons can be filtered.
   * Image path functions again evaluated left-to-right. Fixes bug #20196.
   * Support for [swarm] causing attacks to increase as health decreases.
 * Miscellaneous and bug fixes:
   * Fix invalid memory access crash resulting from deleting all saved games
     in the Load Game dialog
   * Redesigned the hotkey preferences dialog
   * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
   * Ambush now works for desert palms and dead great trees (bug #20207)
   * Hex field size and default terrain are wml configurable
   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
   * Fixed a bug disallowing the left shift and meta key to be detected in
     the hotkeys
   * Added -Wuseless-cast to the CMake pedantic flags.
   * Added -Wc++11-compat to the CMake pedantic flags.
   * Added bzip2 support for savefiles. (new dependency)
   * Fix OOS when observe scenario 2 in a multiplayer campaign (bug #20217).

Version 1.11.0:
 * Add-ons client:
   * The Update Add-ons dialog has been replaced with an alternate view mode
     for the main Add-ons Manager
   * The Add-ons Manager now allows filtering add-ons by installation status
     (all, installed, not installed, upgradable)
   * Add-ons in the Add-ons Manager are initially sorted by title instead of
     the order they were originally uploaded to the server
   * Add-ons with broken/unavailable dependencies are reported to the user
   * The add-on dependencies prompt reports all recursively-resolved
     dependencies, not just the direct dependencies
   * Add-on installation, upgradability, and publish status is reported as a
     footnote for every list entry, plus a field in the Description dialog