@@ -66,6 +66,8 @@ Version 1.11.0+svn:
      wherever weapons can be filtered.
    * Image path functions again evaluated left-to-right. Fixes bug #20196.
    * Support for [swarm] causing attacks to increase as health decreases.
+   * Inactive names and descriptions for abilities and weapon specials will
+     default to the active name/description if omitted.
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog
